# FFT-BenchMark

./: .gitignore  CMakeLists.txt  run.sh
src/: fft_util.cpp  fft_util.hpp  main.cpp  util.cpp  util.hpp
src/benchmark/: benchmark.hpp  ddr_test_1.cpp  ddr_test_2.cpp  fft_2187_test.cpp  fft_2187_test_no_compute.cpp  fft_2187_test_no_twiddle.cpp  fft_2401_read_by_col.cpp  fft_2401_test.cpp  fft_2401_test_no_compute.cpp  fft_2401_test_no_twiddle.cpp  fft_2401_test_only_io.cpp  global_memory_pow2.cpp  global_memory_pow3.cpp  global_memory_pow3_with_branch.cpp  global_memory_pow7.cpp  global_memory_test.cpp  l1_cacheline_test.cpp  register_spill.cpp
src/kernels/: ddr_test_1.cl  ddr_test_2.cl  fft_2187_test.cl  fft_2187_test_no_compute.cl  fft_2187_test_no_twiddle.cl  fft_2401_read_by_col.cl  fft_2401_test.cl  fft_2401_test_no_compute.cl  fft_2401_test_no_twiddle.cl  fft_2401_test_only_io.cl  global_memory_pow2.cl  global_memory_pow3.cl  global_memory_pow3_with_branch.cl  global_memory_pow7.cl  global_memory_test.cl  l1_cacheline_test.cl  register_spill.cl
